Changelog
=========

1.1 (unreleased)
----------------
- GRTH-25 After autosave something in AR/view, the notification panel hasn't style.
- GRTH-29 On AR publish, the page is not redirected to the publication preview
- Restyling
- Selective loading of CSS - fix cached CSS malfunctioning
- Left menu removal. Contextual top menu
- Compatibility with Bika LIMS 3.1.7


1.0 (2014-11-06)
----------------
- GRTH-23 Add Contact to Client throws error
- GRTH-19 Error after trying to add an Attachment Type, Batch Labels or Sub-groups
- GRTH-22 When you deactivate the theme by Add-ons, the pages doesn't render well
- GRTH-20 Unable to save a new Invoice
- GRTH-17 Sometimes activate/deactivate on bikasetup/Instrument doesn't work
- GRTH-5 Site Setup becomes strange
- GRTH-2 AR Imports icon not found
- GRTH-15 Import/LoadSetup data is not working
- GRTH-10 The save icon should be something more than simple txt
- GRTH-9 No good construction in Add AR Form

- ON/OFF button to deactivate/activate Grpahite Theme
