@@ -51,6 +51,7 @@
                     </div>
                     <div class="column-center">
                         <div id="breadcrumbs"></div>
+                        <div id="portal-alert"></div>
                         <div id="edit-bar"></div>
                         <div id="viewlet-above-content"></div>
                         <div id="portal-message-container"></div>
